syntax = "proto3";

package com.etspplbo50.inventoryservicegrpc;

option java_multiple_files = true;
option java_package = "com.etspplbo50.inventoryservicegrpc";
option java_outer_classname = "InventoryProto";

service InventoryService {
  rpc checkStock (CheckStockRequest) returns (CheckStockResponse) {
  }
}

message CheckStockRequest {
  string cafeId = 1;
  repeated string menuId = 2;
}

message CheckStockResponse {
  bool isAvailable = 1;
}
